--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: WetlandTools
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Shared Functions For Wetland Tool
 Version: 0.1.0
-Author: Who wrote it
+Author: TerrainWorks
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
