Add methods for creating training data and style

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,12 @@ export(applyCats)
 export(calcRocStats)
 export(createTrainingDataFromPoints)
 export(extractRasterValues)
+export(extractValues)
 export(fixFactorRaster)
+export(sampleNegativePoints)
 export(samplePoints)
 export(samplePolys)
+import(ROCR)
+import(methods)
+import(stats)
+import(terra)
