--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,12 @@ Package: TerrainWorksUtils
 Type: Package
 Title: General utility functions for TerrainWorks
 Version: 0.1.1
-Author: TerrainWorks
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Authors@R: 
+    c(
+        person("Helen", "Miller", "helenthehuman@gmail.com", role = c("aut", "cre")), 
+        person("Tate", "Brasel", role = "aut")
+     )
+Description: TerrainWorks resources for creating and assessing statistical models for predicting landslide susceptibility
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -17,6 +19,6 @@ Imports:
   terra
 RoxygenNote: 7.1.2
 Suggests: 
-    covr,
-    testthat (>= 3.0.0)
+  covr,
+  testthat (>= 3.0.0)
 Config/testthat/edition: 3
