--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,13 @@ export(alignRasters)
 export(applyCats)
 export(calcRocStats)
 export(createTrainingDataFromPoints)
+export(createTrainingDataFromPolygons)
 export(extractRasterValues)
 export(extractValues)
 export(fixFactorRaster)
+export(sampleFromPolygons)
 export(sampleNegativePoints)
 export(samplePoints)
-export(samplePolys)
 import(ROCR)
 import(methods)
 import(randomForest)
