--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 export(alignRasters)
 export(applyCats)
 export(calcRocStats)
+export(createAnalysisRegionMask)
 export(createTrainingDataFromPoints)
 export(createTrainingDataFromPolygons)
+export(extractRange)
 export(extractRasterValues)
 export(extractValues)
 export(fixFactorRaster)
