Update methods for training data to work with WIP

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export(alignRasters)
 export(applyCats)
 export(calcRocStats)
+export(calculate_surface_metrics)
 export(createAnalysisRegionMask)
 export(createTrainingDataFromPoints)
 export(createTrainingDataFromPolygons)
+export(createTrainingPointsFromPolygons)
 export(extractRange)
 export(extractRasterValues)
 export(extractValues)
