added buffer sampling to create_training_data
also changed create_training_data from camelCase to snake_case

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,16 +5,17 @@ export(applyCats)
 export(calcRocStats)
 export(calculate_surface_metrics)
 export(createAnalysisRegionMask)
-export(createTrainingDataFromPoints)
-export(createTrainingDataFromPolygons)
-export(createTrainingPointsFromPolygons)
+export(create_training_data_from_points)
+export(create_training_data_from_polygons)
+export(create_training_points_from_polygons)
 export(extractRange)
 export(extractRasterValues)
-export(extractValues)
+export(extract_values)
 export(fixFactorRaster)
+export(make_neg_region)
 export(sampleFromPolygons)
-export(sampleNegativePoints)
-export(samplePoints)
+export(sample_negative_points)
+export(sample_points)
 import(ROCR)
 import(methods)
 import(randomForest)
