added buffer sampling to create_training_data
also changed create_training_data from camelCase to snake_case

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,14 +9,15 @@ export(calcRocStats)
 export(calculate_surface_metrics)
 export(contributing_area)
 export(createAnalysisRegionMask)
-export(createTrainingDataFromPoints)
-export(createTrainingDataFromPolygons)
-export(createTrainingPointsFromPolygons)
 export(elev_deriv)
+export(create_training_data_from_points)
+export(create_training_data_from_polygons)
+export(create_training_points_from_polygons)
 export(extractRange)
 export(extractRasterValues)
 export(extract_values)
 export(fixFactorRaster)
+export(make_neg_region)
 export(get_args)
 export(get_dem)
 export(get_input_file)
