added tests and file surface_metrics.r, input_files_utils.r

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,11 +12,17 @@ export(createAnalysisRegionMask)
 export(elev_deriv)
 export(create_training_data_from_points)
 export(create_training_data_from_polygons)
+export(create_training_data_with_buffer)
 export(create_training_points_from_polygons)
+export(elev_deriv)
 export(extractRange)
 export(extractRasterValues)
 export(extract_values)
 export(fixFactorRaster)
+export(get_args)
+export(get_dem)
+export(get_input_file)
+export(get_keyword)
 export(make_neg_region)
 export(get_args)
 export(get_dem)
