basic test for surface_metrics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,6 @@ export(calcRocStats)
 export(calculate_surface_metrics)
 export(contributing_area)
 export(createAnalysisRegionMask)
-export(elev_deriv)
 export(create_training_data_from_points)
 export(create_training_data_from_polygons)
 export(create_training_data_with_buffer)
@@ -24,13 +23,10 @@ export(get_dem)
 export(get_input_file)
 export(get_keyword)
 export(make_neg_region)
-export(get_args)
-export(get_dem)
-export(get_input_file)
-export(get_keyword)
 export(makegrids_input)
 export(parse_arg)
-export(sampleFromPolygons)
+export(plot_metric_distribution)
+export(sample_from_polygons)
 export(sample_negative_points)
 export(sample_points)
 import(ROCR)
