--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,14 +8,14 @@ export(build_rf_model)
 export(calcRocStats)
 export(calculate_surface_metrics)
 export(contributing_area)
-export(createAnalysisRegionMask)
+export(create_analysis_region_mask)
 export(create_training_data_from_points)
 export(create_training_data_from_polygons)
 export(create_training_data_with_buffer)
 export(create_training_points_from_polygons)
 export(elev_deriv)
-export(extractRange)
 export(extractRasterValues)
+export(extract_range)
 export(extract_values)
 export(fixFactorRaster)
 export(get_args)
