--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(create_training_data_from_points)
 export(create_training_data_from_polygons)
 export(create_training_data_with_buffer)
 export(create_training_points_from_polygons)
+export(dem_to_model)
 export(elev_deriv)
 export(extractRasterValues)
 export(extract_range)
