--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,11 +19,13 @@ export(extractRasterValues)
 export(extract_range)
 export(extract_values)
 export(fixFactorRaster)
+export(generate_success_curve)
 export(get_args)
 export(get_dem)
 export(get_input_file)
 export(get_keyword)
 export(make_neg_region)
+export(make_prob_raster)
 export(makegrids_input)
 export(parse_arg)
 export(plot_metric_distribution)
