TerrainWorkUtils. Minor updates

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,55 @@ inst/doc
 PFA_landslide_initiation_files/figure-html/
 
 NAMESPACE
+
+.dbf
+
+.log
+
+.shp
+
+.shx
+
+analysis/PFA_data_extraction_files/figure-html/
+
+analysis/PFA_data_extraction_files/libs/bootstrap/
+
+analysis/PFA_data_extraction_files/libs/clipboard/
+
+analysis/PFA_data_extraction_files/libs/quarto-html/
+
+analysis/PFA_runout_files/figure-html/
+
+analysis/PFA_runout_files/libs/bootstrap/
+
+analysis/PFA_runout_files/libs/clipboard/
+
+analysis/PFA_runout_files/libs/quarto-html/
+
+analysis/PFA_runout.zip
+
+analysis/nul
+
+*.aux
+
+*.woff
+
+analysis/PFA_runout_DOGAMI_files/libs/bootstrap/
+
+analysis/PFA_runout_DOGAMI_files/figure-pdf/
+
+analysis/PFA_runout_DOGAMI_files/figure-html/
+
+analysis/PFA_runout_DOGAMI.pdf
+
+analysis/PFA_runout_DOGAMI.log
+
+analysis/PFA_runout_DOGAMI.docx
+
+analysis/PFA_runout_DOGAMI.tex
+
+analysis/PFA_runout_DOGAMI_files/libs/clipboard/
+
+analysis/PFA_runout_DOGAMI_files/libs/quarto-html/
+
+analysis/PFA_runout_DOGAMI.toc
