--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ analysis/PFA_runout_DOGAMI_files/libs/clipboard/
 analysis/PFA_runout_DOGAMI_files/libs/quarto-html/
 
 analysis/PFA_runout_DOGAMI.toc
+
+R/create_model_dataframe.R
