--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,9 @@ analysis/images/Layout4.jpg
 TerrainWorksUtils.Rproj
 
 analysis/images/init_fit3_200.jpg
+
+analysis/PFA_runout_DOGAMI.docx
+
+analysis/PFA_data_extraction.qmd
+
+analysis/PFA_initiation_take_a_look.qmd
