--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@ analysis/PFA_runout_DOGAMI.docx
 analysis/PFA_data_extraction.qmd
 
 analysis/PFA_initiation_take_a_look.qmd
+
+analysis/images/PCA_6.tif
