--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,7 @@ analysis/PFA_data_extraction.qmd
 analysis/PFA_initiation_take_a_look.qmd
 
 analysis/images/PCA_6.tif
+
+analysis/Criteria_ISPR.qmd
+
+analysis/~$iteria_ISPR.docx
