--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,5 @@ analysis/Criteria_ISPR_files/figure-html/unnamed-chunk-16-1.png
 analysis/Criteria_ISPR_files/figure-html/unnamed-chunk-19-1.png
 
 analysis/Criteria_ISPR.qmd
+
+analysis/runoutDocumentation.zip
