--- a/.gitignore
+++ b/.gitignore
@@ -232,3 +232,13 @@ analysis/Criteria_ISPR_files/figure-html/unnamed-chunk-16-1.png
 analysis/Criteria_ISPR_files/figure-html/unnamed-chunk-19-1.png
 
 analysis/Criteria_ISPR.qmd
+
+*.Rmd
+
+*.png
+
+inst/examples/
+
+*.txt
+
+*.Rdata
