--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,12 @@ Title: General utility functions for TerrainWorks
 Version: 0.1.3
 Authors@R: 
     c(
-        person("Helen", "Miller", email = "helenthehuman@gmail.com", role = c("aut", "cre")), 
+        person("Dan", "Miller", email = "dan@terrainworks.com", role = c("aut", "cre")),
+        person("Helen", "Miller", role = c("aut")), 
         person("Tate", "Brasel", role = "aut"),
-        person("Julia", "Lober", email = "julia.lober@outlook.com", role = "aut")
+        person("Julia", "Lober", role = "aut")
      )
-Description: TerrainWorks resources for creating and assessing statistical models for predicting landslide susceptibility.
+Description: TerrainWorks resources for creating and assessing statistical models.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -19,8 +20,6 @@ Imports:
   stats,
   terra (>= 1.5),
   tibble,
-  tictoc,
-  dplyr,
   data.table
 RoxygenNote: 7.2.3
 Suggests: 
